# uhttp

./: .gitignore  CMakeLists.txt  README.md  uhttp.c
getopt/: CMakeLists.txt
json/: info.json  jjj.json
local/: index.htm
scripts/: get-data.py  make_req.py  script.txt
src/: uhttp.c
web-data/: accessManagement.config.global.get.json  accessManagement.config.ipv4.get.json  accessManagement.config.ipv6.get.json  dns.config.server.get.json  fan.status.speed.get.json  firmware.status.image.get.json  ip.config.interface.ipv4.get.json  ip.config.route.ipv4.get.json  ip.status.interface.ipv4.get.json  ip.status.interface.link.get.json  ip.status.route.ipv4.get.json  systemUtility.config.systemInfo.get.json  systemUtility.status.boardinfo.get.json  systemUtility.status.systemUptime.get.json
